package hcmute.system.hotel.cknhom11qlhotel.model.enums;

public enum AccountStatus {
    ACTIVE,
    INACTIVE,
    LOCKED
}

