package hcmute.system.hotel.cknhom11qlhotel.model.enums;

public enum BookingStatus {
    PENDING,
    CONFIRMED,
    CHECKED_IN,
    CHECKED_OUT,
    CANCELLED
}

