package hcmute.system.hotel.cknhom11qlhotel.model.enums;

public enum DiscountType {
    PERCENT,
    AMOUNT
}

