package hcmute.system.hotel.cknhom11qlhotel.model.enums;

public enum EmployeeRole {
    ADMIN,
    RECEPTIONIST,
    MANAGER
}

