package hcmute.system.hotel.cknhom11qlhotel.model.enums;

public enum PaymentMethod {
    CASH,
    CARD,
    TRANSFER,
    E_WALLET
}

