package hcmute.system.hotel.cknhom11qlhotel.model.enums;

public enum RoomStatus {
    AVAILABLE,
    OCCUPIED,
    MAINTENANCE,
    CLEANING
}

